Re-import of 4.1.5